# ti-intel

./: .gitignore  .mcp.json.example  CLAUDE.md  README.md
.claude/: settings.json  sync-config.yaml
.claude/agents/: implementer.md  research-deep.md  researcher.md  reviewer.md  startup-analyst.md  startup-scout.md  validator.md
.claude/hooks/: post-edit-format.sh  (+1 more)
docs/: CLAUDE.md  SecureAI제안서.md  agent-design-template.md  command-reference.md  design-workspace-restructure.md  guide-platform-overview.md  guide-skill-chaining.md  guide-tool-reference.md  platform-guide.md  tech-intelligence-platform-v1.md  tech-taxonomy-overview.md  template-wtis-proposal.md  template-wtis-report.md  workspace-restructure.design.md  wtis-proposal-template.md  wtis-v2.skill.md  wtis-v3.skill.md
outputs/: CLAUDE.md
projects/: CLAUDE.md
projects/design-system/: CLAUDE.md  pyproject.toml
projects/design-system/src/design_system/: __init__.py  mcp_server.py  models.py  token_loader.py
projects/design-system/src/design_system/assets/styles/: report-consulting.css
projects/design-system/src/design_system/assets/templates/: report-consulting.html.j2
projects/design-system/src/design_system/parsers/: markdown.py
projects/design-system/src/design_system/renderers/: base.py  pdf.py  pptx.py  validator.py
projects/design-system/src/design_system/tokens/: base.json
projects/design-system/src/design_system/tokens/themes/: dark.json  minimal.json  professional.json
projects/design-system/tests/: test_markdown_parser.py  test_pdf_renderer.py  test_pptx_renderer.py  test_token_loader.py  test_validator.py
projects/intel-store/: CLAUDE.md  pyproject.toml
projects/intel-store/scripts/: backfill_embeddings.py  create_hnsw_index.sql  migrate_data.py
projects/intel-store/src/intel_store/: __init__.py  config.py  embeddings.py  mcp_server.py  models.py
projects/intel-store/src/intel_store/collectors/: arxiv.py  gdelt.py  google_patents.py  naver_news.py  patents_view.py  semantic_scholar.py  tavily.py
projects/intel-store/src/intel_store/db/: client.py  repository.py
projects/intel-store/src/intel_store/db/migrations/: 003_intel_items.sql
projects/intel-store/tests/: test_collectors.py  test_embeddings.py  test_mcp_server.py  test_models.py  test_repository.py
projects/patent-intel/: CLAUDE.md  pyproject.toml
projects/patent-intel/src/patent_intel/: __init__.py  mcp_server.py  models.py
projects/patent-intel/src/patent_intel/collectors/: patents_view.py
projects/patent-intel/src/patent_intel/db/: client.py  repository.py
projects/patent-intel/src/patent_intel/db/migrations/: 001_initial.sql
projects/patent-intel/tests/: test_models.py  test_patents_view.py
projects/startup-db/: CLAUDE.md  pyproject.toml
projects/startup-db/db/migrations/: 001_schema.sql
projects/startup-db/scripts/: migrate_csv.py
projects/startup-db/src/startup_db/: config.py  db.py  mcp_server.py  models.py
projects/telco-factbook/: CLAUDE.md  pyproject.toml
projects/telco-factbook/data/raw/skt/: 2024Q1_financial_statement.xlsx  2025Q2_financial_statement.xlsx  2025Q3_financial_statement.xlsx  2025Q4_financial_statement.xlsx
projects/telco-factbook/scripts/: download_ir_files.py  download_press_releases.py
projects/telco-factbook/src/telco_factbook/: __init__.py  cli.py  config.py  mcp_server.py  models.py
projects/telco-factbook/src/telco_factbook/collectors/: __init__.py  sec_edgar.py
projects/telco-factbook/src/telco_factbook/db/: __init__.py  client.py  repository.py
projects/telco-factbook/src/telco_factbook/db/migrations/: 001_initial.sql
projects/telco-factbook/src/telco_factbook/parsers/: __init__.py  base.py  kt_parser.py  skt_parser.py
projects/telco-factbook/src/telco_factbook/scrapers/: __init__.py  base.py  kt.py  skt.py
projects/telco-factbook/tests/: conftest.py  test_parsers.py  test_scrapers.py  test_sec_edgar.py
projects/trend-tracker/: .gitignore  CLAUDE.md  pyproject.toml
projects/trend-tracker/scripts/: setup_db.py
projects/trend-tracker/src/trend_tracker/: __init__.py  config.py  mcp_server.py  models.py
projects/trend-tracker/src/trend_tracker/collectors/: __init__.py  base.py  gdelt.py  tavily.py
projects/trend-tracker/src/trend_tracker/db/: client.py  repository.py
projects/trend-tracker/src/trend_tracker/db/migrations/: 001_initial.sql  002_topic_fk.sql
projects/trend-tracker/tests/: test_gdelt.py  test_mcp_server.py  test_models.py  test_repository.py
references/: CLAUDE.md
research/: CLAUDE.md
scripts/: register_l3_topics.py  run_migration.py
(+127 files in other folders)
