[project]
name = "design-system"
version = "0.1.0"
description = "Multi-format design system — design tokens, themes, and renderers for presentations and web"
requires-python = ">=3.11"
dependencies = [
    "python-pptx>=1.0",
    "pydantic>=2.5",
    "mcp>=1.0",
    "jinja2>=3.1",
    "python-frontmatter>=1.1",
    "mistune>=3.0",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/design_system"]

[tool.ruff]
target-version = "py311"
