[project]
name = "telco-factbook"
version = "0.1.0"
description = "Telco competitor earnings factbook — scrape, parse, and store IR financial data"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "openpyxl>=3.1",
    "supabase>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
factbook = "telco_factbook.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telco_factbook"]

[tool.ruff]
target-version = "py311"
